qa-etl/apps/spark-history-server/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spark-history-server
  name: spark-history-server
spec:
  ports:
    - port: 18080
      protocol: TCP
      targetPort: 18080
  selector:
    app: spark-history-server
