qa-etl/apps/spark-history-server/ingress.yml

apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: spark-history-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-secret: spark-history-basic-auth-password
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
    - hosts:
        - spark-history-qa.etl.juno.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: spark-history-qa.etl.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-history-server
                port:
                  number: 18080
